@@ -291,10 +291,11 @@ public class TestPackages extends SolrCloudTestCase {
         10,
         cluster.getSolrClient(),
         new GenericSolrRequest(
-            SolrRequest.METHOD.GET,
-            "/stream",
-            new MapSolrParams(
-                Map.of("collection", COLLECTION_NAME, WT, JAVABIN, "action", "plugins"))),
+                SolrRequest.METHOD.GET,
+                "/stream",
+                new MapSolrParams(
+                    Map.of("collection", COLLECTION_NAME, WT, JAVABIN, "action", "plugins")))
+            .setRequiresCollection(true),
         Map.of(":plugins:mincopy", "org.apache.solr.client.solrj.io.stream.metrics.MinCopyMetric"));
 
     UpdateRequest ur = new UpdateRequest();
@@ -558,7 +559,8 @@ public class TestPackages extends SolrCloudTestCase {
                 "true"));
 
     GenericSolrRequest req1 =
-        new GenericSolrRequest(SolrRequest.METHOD.GET, "/config/" + componentType, params);
+        new GenericSolrRequest(SolrRequest.METHOD.GET, "/config/" + componentType, params)
+            .setRequiresCollection(true);
     TestDistribFileStore.assertResponseValues(
         10,
         client,
@@ -843,7 +845,8 @@ public class TestPackages extends SolrCloudTestCase {
     SolrParams params =
         new MapSolrParams(Map.of("collection", COLLECTION_NAME, WT, JAVABIN, "meta", "true"));
 
-    GenericSolrRequest req = new GenericSolrRequest(SolrRequest.METHOD.GET, path, params);
+    GenericSolrRequest req =
+        new GenericSolrRequest(SolrRequest.METHOD.GET, path, params).setRequiresCollection(true);
     TestDistribFileStore.assertResponseValues(10, client, req, expected);
   }
 
